fix toast z-index

--- a/src/resources/sass/omen/omenToast.scss
+++ b/src/resources/sass/omen/omenToast.scss
@@ -4,7 +4,7 @@
     left: 50%;
     min-width: 250px;
     left: 50%;
-    z-index: 1050;
+    z-index: 1070;
     left: 50%;
     margin-left: -10em;
     width: 10em;
